<resources>
    <string name="app_name">Календарь событий</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_about_program_activity">О приложении</string>
    <string name="title_event_activity_info">Карточка события</string>
    <string name="title_event_activity_edit">Редактор события</string>
    <string name="settings">Настройки</string>
    <string name="list_view">Списком</string>
    <string name="calendar_view">В виде календаря</string>
    <string name="about_program">О приложении</string>
    <string name="generate_random_data">Генерировать случайные данные</string>
    <string name="default_app_view">Вид по умолчанию:</string>
    <string name="setting_is_calendar_view">вид календаря</string>
    <string name="setting_is_list_view">вид списка</string>
    <string name="setting_flush_sort_and_filter">Сброс фильтров и сортировки</string>
    <string name="setting_del_data">Удалить все данные</string>
    <string name="about_proj_name">Название проекта: \"Календарь событий\"</string>
    <string name="about_proj_ver">Версия: v0.1-demo</string>
    <string name="about_proj_author">Автор: Oleg Ustsov</string>
    <string name="about_email">e-mail: menggp.dev@gmail.com</string>
    <string name="about_resources">Использованные ресурсы:</string>
    <string name="cc_licence_text">В этом проекте использованы материалы по лицензии \"Creative Commons Attribution-NoDerivs 3.0 Unported\" ( https://creativecommons.org/licenses/by-nd/3.0/ )</string>
    <string name="icon8_text">В этом проекте использованы материалы полученные с ресурса ICON8 ( https://icons8.ru ) </string>
    <string name="applandeo_calendar_text">В этом проекте использован виджет календаря \"Applandeo / Material-Calendar-View\" - Material Calendar View for Android. Ссылка на проект: https://github.com/Applandeo/Material-Calendar-View </string>
    <string name="about_demo_limits">Основные ограничения DEMO-версии:</string>
    <string name="about_demo_limits_text">
        - Не реализованы напоминания
        \n- Не реализовано сохранение/восстановление списка событий
        \n- Ограниченная функциональность выбора изображения для события - только предустановленные
    </string>
    <string name="about_description">Описание:</string>
    <string name="about_description_text">
        Это приложение поможет вам не забыть о важных периодических событиях, таких например, как дни рождения, годовщины, праздники и другие.
        \nПриложение имеет простой и интуитивно понятный интерфейс и предлагает два вида отображения событий: в виде календаря и в виде списка.
        \nВы легко можете переключаться между этими видами, а также воспользоваться функциями фильтрации событий по типу, дате (месяцам) и имени события и настроить удобную для вас сортировку.
        \nБыстрый доступ к информационным карточкам событий и возможность сохранять комментарии для событий, позволят быстро и удобно просматривать важную информацию о событиях и легко ее редактировать.
    </string>
    <string name="about_whats_new">Что нового:</string>
    <string name="about_whats_new_v0.1">v0.1-demo:</string>
    <string name="about_whats_new_v0.1_text">- Первая опубликованная версия</string>
    <string name="main_act_type_filter" >ТИП       </string>
    <string name="main_act_sort"        >СОРТИРОВКА</string>
    <string name="main_act_month"       >МЕСЯЦ     </string>
    <string name="main_act_add"         >ДОБАВИТЬ  </string>
    <string name="main_act_year"        >ГОД       </string>
    <string name="main_act_now_month"   >ТЕКУЩИЙ   </string>
    <string name="search_by_name">Поиск по имени</string>
    <string name="event_date_note">дата события</string>
    <string name="event_ages_note">возраст</string>
    <string name="event_type_note">тип события</string>
    <string name="event_alert_note">напоминание</string>
    <string name="event_comment_note">Комментарий</string>
    <string name="event_name_hint">Введите имя события</string>
    <string name="event_comment_hint">введите комментарий</string>
    <string name="dialog_del_confirmation_title">Удалить событие?</string>
    <string name="dialog_save_confirmation_title">Сохранить изменения?</string>
    <string name="dialog_no_name_alert_title">Не заполнено имя события!</string>
    <string name="dialog_del_action">Удалить</string>
    <string name="dialog_cancel_action">Отмена</string>
    <string name="dialog_yes_action">Да</string>
    <string name="dialog_no_action">Нет</string>
    <string name="dialog_flush_action">Сбросить</string>
    <string name="dialog_back_action">Назад</string>
    <string name="dialog_edit_action">Изменить</string>
    <string name="dialog_event_date_picker">Выбор даты события</string>
    <string name="dialog_type_filter_type_filter">Фильтр по типу события:</string>
    <string name="dialog_deselect_all">Снять все</string>
    <string name="dialog_select_all">Выделить все</string>
    <string name="dialog_sort">Сортировка</string>
    <string name="dialog_sort_type0">от текущей даты (по умолчанию)</string>
    <string name="dialog_sort_type1">с начала года</string>
    <string name="dialog_sort_type2">по имени события</string>
    <string name="dialog_sort_and_filter_flush">Сбросить фильтры и сортировки?</string>
    <string name="dialog_del_all_data_title">Удаление данных приложения</string>
    <string name="dialog_del_all_data">Все данные о событиях будут безвозвратно удалены. Подтвердите удаление?</string>
    <string name="dialog_month_choice_title">Выбор месяца:</string>
    <string name="dialog_year_choice_title">Выбор года:</string>
    <string name="dialog_set_now_date">Вернуться к текущему месяцу</string>
    <string name="dialog_year">Год:</string>
    <string name="dialog_29_feb_no_leap">28 / 29 февраля</string>
    <string name="dialog_error">Ошибка</string>
    <string name="dialog_bad_dialog_text">Ошибка диалога.\nПри повторном появлении перезапустите приложение.</string>
    <string name="toast_del_accepted">Событие удалено</string>
    <string name="toast_date_changed">Дата изменена</string>
    <string name="toast_event_change_saved">Изменения сохранены</string>
    <string name="toast_event_created">Событие создано</string>
    <string name="toast_event_change_no_saved">Изменения НЕ сохранены</string>
    <string name="toast_type_filter_flush">Фильтр сброшен</string>
    <string name="toast_type_filter_changed">Фильтр изменен</string>
    <string name="toast_sort_default">Сортировка по умолчанию</string>
    <string name="toast_sort_changed">Тип сортировки изменен</string>
    <string name="toast_sort_and_filter_flush">Фильтры и сортировки сброшены</string>
    <string name="toast_del_all_data">Все данные приложения удалены</string>
    <string name="january">Января</string>
    <string name="february">Февраля</string>
    <string name="march">Марта</string>
    <string name="april">Апреля</string>
    <string name="may">Мая</string>
    <string name="june">Июня</string>
    <string name="july">Июля</string>
    <string name="august">Августа</string>
    <string name="september">Сентября</string>
    <string name="october">Октября</string>
    <string name="november">Ноября</string>
    <string name="december">Декабря</string>
    <string name="january_inf">Январь</string>
    <string name="february_inf">Февраль</string>
    <string name="march_inf">Март</string>
    <string name="april_inf">Апрель</string>
    <string name="may_inf">Май</string>
    <string name="june_inf">Июнь</string>
    <string name="july_inf">Июль</string>
    <string name="august_inf">Август</string>
    <string name="september_inf">Сентябрь</string>
    <string name="october_inf">Октябрь</string>
    <string name="november_inf">Ноябрь</string>
    <string name="december_inf">Декабрь</string>
    <string name="today">Сегодня</string>
    <plurals name="days">
        <item quantity="one">%d день</item>
        <item quantity="two">%d дня</item>
        <item quantity="few">%d дня</item>
        <item quantity="other">%d дней</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">год</item>
        <item quantity="two">года</item>
        <item quantity="few">года</item>
        <item quantity="other">лет</item>
    </plurals>
    <string name="birthday">день рождения</string>
    <string name="anniversary">годовщина</string>
    <string name="memodate">памятная дата</string>
    <string name="holiday">праздник</string>
    <string name="other">событие</string>
    <string name="no_alert">не напоминать</string>
    <string name="silent_alert">тихо</string>
    <string name="in_day_alert">в день</string>
    <string name="day_before_alert">за день</string>
    <string name="intensive_alert">интенсивно</string>
    <string name="every_month_alert">ежемесячно</string>
    <string name="cd_event_img">Изображение события</string>
    <string name="cd_filter">Фильтр</string>
    <string name="cd_sort">Сортировка</string>
    <string name="cd_add">Добавить</string>
    <string name="cd_now_month">Установить текущий месяц</string>
    <string name="cd_year_choice">Выбор года</string>
    <string name="cd_month_choice">Выбор месяца</string>
    <string name="cd_clear_name_search">Очистка поля поиска по имени</string>
    <string name="cd_icon_type">Изображение типа события</string>
    <string name="lower_since_with_space">"с "</string>
    <string name="no_year">без года</string>
    <string name="material_calendar_monday">ПН</string>
    <string name="material_calendar_tuesday">ВТ</string>
    <string name="material_calendar_wednesday">СР</string>
    <string name="material_calendar_thursday">ЧТ</string>
    <string name="material_calendar_friday">ПТ</string>
    <string name="material_calendar_saturday">СБ</string>
    <string name="material_calendar_sunday">ВС</string>
</resources>