<?xml version="1.0" encoding="utf-8"?>
<!--
    Активити - О приложении
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Основная информация -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_proj_name"
            style="@style/text16_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_proj_ver"
            style="@style/text16"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_proj_author"
            style="@style/text16"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_email"
            style="@style/text16"
            android:autoLink="email"/>

        <!-- Ограничения DEMO-версии -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/about_demo_limits"
            style="@style/text16_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_demo_limits_text"
            style="@style/text16"/>

        <!-- Описание -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/about_description"
            style="@style/text16_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_description_text"
            style="@style/text16"/>

        <!-- Использованные материлы -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/about_resources"
            style="@style/text16_bold"/>
        <TextView
            android:text="@string/cc_licence_text"
            style="@style/about_program_style"
            android:autoLink="web"/>
        <TextView
            android:text="@string/icon8_text"
            style="@style/about_program_style"
            android:autoLink="web"/>
        <TextView
            android:text="@string/applandeo_calendar_text"
            style="@style/about_program_style"
            android:autoLink="web"/>

        <!-- Что нового -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/about_whats_new"
            style="@style/text16_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_whats_new_v0.1"
            style="@style/text16_bold_italic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/about_whats_new_v0.1_text"
            style="@style/text16"/>

    </LinearLayout>
</ScrollView>
<!-- end_layout -->