<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Устновка текущей даты -->
    <RelativeLayout
        android:id="@+id/dialog_set_now_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/img_set_default_month"
            android:layout_centerVertical="true"
            android:padding="4dp"
            style="@style/text18_bold_center"
            android:text="@string/dialog_set_now_date"/>
        <ImageView
            android:id="@+id/img_set_default_month"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/month_now_stroke"
            android:contentDescription="@string/cd_now_month"/>
    </RelativeLayout>

    <!-- Выбор месяца -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 1е полугодие -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/month_choice_january"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/january_inf"/>
            <TextView
                android:id="@+id/month_choice_february"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/february_inf"/>
            <TextView
                android:id="@+id/month_choice_march"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/march_inf"/>
            <TextView
                android:id="@+id/month_choice_april"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/april_inf"/>
            <TextView
                android:id="@+id/month_choice_may"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/may_inf"/>
            <TextView
                android:id="@+id/month_choice_june"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/june_inf"/>
        </LinearLayout>

        <!-- 2е полугодие -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/month_choice_july"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/july_inf"/>
            <TextView
                android:id="@+id/month_choice_august"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/august_inf"/>
            <TextView
                android:id="@+id/month_choice_september"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/september_inf"/>
            <TextView
                android:id="@+id/month_choice_october"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/october_inf"/>
            <TextView
                android:id="@+id/month_choice_november"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/november_inf"/>
            <TextView
                android:id="@+id/month_choice_december"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18_bold_center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:background="@color/gray_light"
                android:text="@string/december_inf"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>