<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- "Кнопка" - снять все -->
        <RelativeLayout
            android:id="@+id/dialog_deselect_all_months"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_light"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                style="@style/text14_bold_center"
                android:text="@string/dialog_deselect_all"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/checkbox_empty"
                android:contentDescription="@string/dialog_deselect_all"/>
        </RelativeLayout>

        <!-- "Кнопка" - выделить все -->
        <RelativeLayout
            android:id="@+id/dialog_select_all_months"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_light"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                style="@style/text14_bold_center"
                android:text="@string/dialog_select_all"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/checkbox_full"
                android:contentDescription="@string/dialog_select_all"/>
        </RelativeLayout>

    </LinearLayout>

    <!-- Выбор месяца -->
    <!-- 1е полугодие -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/ev_month_on_dialog_january"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/january_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_february"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/february_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_march"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/march_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_april"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/april_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_may"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/may_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_june"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/june_inf"/>
        </LinearLayout>

        <!-- 2е полугодие -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/ev_month_on_dialog_july"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/july_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_august"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/august_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_september"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/september_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_october"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/october_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_november"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/november_inf"/>
            <CheckBox
                android:id="@+id/ev_month_on_dialog_december"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text18"
                android:layout_margin="8dp"
                android:text="@string/december_inf"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>