<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- "Кнопка" - снять все -->
        <RelativeLayout
            android:id="@+id/dialog_deselect_all_types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_light"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                style="@style/text14_bold_center"
                android:text="@string/dialog_deselect_all"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/checkbox_empty"
                android:contentDescription="@string/dialog_deselect_all"/>
        </RelativeLayout>

        <!-- "Кнопка" - выделить все -->
        <RelativeLayout
            android:id="@+id/dialog_select_all_types"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_light"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                style="@style/text14_bold_center"
                android:text="@string/dialog_select_all"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/checkbox_full"
                android:contentDescription="@string/dialog_select_all"/>
         </RelativeLayout>

    </LinearLayout>

    <!-- Выбор типа события -->
    <CheckBox
        android:id="@+id/ev_type_birthday_on_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text18"
        android:layout_margin="8dp"
        android:text="@string/birthday"/>
    <CheckBox
        android:id="@+id/ev_type_anniversary_on_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text18"
        android:layout_margin="8dp"
        android:text="@string/anniversary"/>
    <CheckBox
        android:id="@+id/ev_type_memodate_on_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text18"
        android:layout_margin="8dp"
        android:text="@string/memodate"/>
    <CheckBox
        android:id="@+id/ev_type_holiday_on_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text18"
        android:layout_margin="8dp"
        android:text="@string/holiday"/>
    <CheckBox
        android:id="@+id/ev_type_other_on_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text18"
        android:layout_margin="8dp"
        android:text="@string/other"/>

</LinearLayout>